# vox-serve

./: .buildinfo  .gitignore  .mcp.json  CHANGELOG.md  MANIFEST.in  README.md  api.html  architecture.html  cli.html  concepts.html  development.html  genindex.html  index.html  models.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  start_eq.sh
.github/workflows/: ci.yml  docs.yml  publish.yml
_autosummary/: vox_serve.flashinfer_utils.html  vox_serve.html  vox_serve.launch.html  vox_serve.requests.html  vox_serve.sampling.html  vox_serve.scheduler_entry.html  vox_serve.utils.html
_sources/: cli.rst  concepts.rst  index.rst  models.rst
_sources/_autosummary/: vox_serve.flashinfer_utils.rst  vox_serve.launch.rst  vox_serve.requests.rst  vox_serve.sampling.rst
_sources/usage/: cosyvoice2.md  step-audio.md
_static/css/: custom_log.css
benchmark/: goodput.py  sampling-latency.py  throughput.py
docs/: Makefile  api.rst  architecture.rst  cli.rst  concepts.rst  conf.py  development.rst  index.rst  models.rst  quickstart.rst  requirements.txt
docs/_autosummary/: vox_serve.launch.rst  vox_serve.rst  vox_serve.scheduler_entry.rst  vox_serve.utils.rst
docs/_static/css/: custom_log.css
docs/usage/: chatterbox.md  csm.md  glm-voice.md  index.rst  orpheus.md  qwen3-tts.md  zonos.md
examples/audiobook/: README.md  audiobook.py
examples/input_streaming/: README.md  input_streaming.py
examples/playground/: README.md  app.py  server_manager.py
examples/playground/static/css/: styles.css
examples/playground/static/js/: audio-player.js  main.js
examples/playground/templates/: index.html
examples/simple_client/: README.md  index.html
tests/: test_ming_latent.py
usage/: chatterbox.html  cosyvoice2.html  csm.html  glm-voice.html  index.html  orpheus.html  qwen3-tts.html  step-audio.html  zonos.html
vox-serve/: api_server.py  flashinfer_utils.py  launch.py  model.py  requests.py  sampling.py  scheduler.py  tokenizer.py  utils.py  worker.py
vox-serve/encoder/: glm.py  higgs.py  step_audio_2.py  zonos.py
vox-serve/model/: __init__.py  base.py  csm.py  glm_voice.py  higgs.py  orpheus.py  step_audio_2.py  zonos.py
vox-serve/scheduler/: __init__.py  base.py  offline.py  online.py
vox-serve/tokenizer/: dac.py  glm.py  glm_decoder.py  glm_encoder.py  higgs.py  mimi.py  s3.py  semantic_module.py  snac.py  step_audio_2.py
vox-serve/tokenizer/descriptaudiocodec/dac/model/: base.py  dac.py
vox-serve/tokenizer/descriptaudiocodec/dac/nn/: quantize.py
vox-serve/tokenizer/quantization/: __init__.py  ac.py  core_vq.py  core_vq_lsx_version.py  ddp_utils.py  distrib.py  vq.py
vox-serve/watermarker/: silentcipher.py
vox-serve/worker/: __init__.py  base.py  cuda_graph_worker.py
vox_serve/: __init__.py  conductor_entry.py  detokenizer_service.py  flashinfer_utils.py  launch.py  remote_detokenizer.py  requests.py  sampling.py  scheduler_entry.py  utils.py
vox_serve/conductor/: __init__.py  base.py  disaggregation.py  offline.py  online.py
vox_serve/encoder/: chatterbox.py  zonos.py
vox_serve/model/: __init__.py  base.py  chatterbox.py  cosyvoice2.py  csm.py  glm_voice.py  ming_latent.py  orpheus.py  qwen3_tts.py  step_audio_2.py  zonos.py
vox_serve/pool/: __init__.py  base.py  cuda_graph_pool.py
vox_serve/scheduler/: __init__.py  base.py  disaggregation.py  input_streaming.py  multi_gpu.py  offline.py  online.py
vox_serve/strategy/: __init__.py  audio_codec.py  base.py  depth_transformer.py  encoder.py  llm.py  vision_diffusion.py
vox_serve/tokenizer/: base.py  chatterbox.py  cosyvoice2.py  cosyvoice_flow.py  dac.py  glm.py  hifigan.py  qwen3_codec.py  s3.py  snac.py  step_audio_2.py
vox_serve/watermarker/: perth.py  silentcipher.py
vox_serve/worker/: __init__.py  base.py  cuda_graph_worker.py
