[project]
name = "vox-serve"
version = "0.0.1"
description = "A serving system for speech language models."
requires-python = ">=3.12"

# Your project's direct dependencies go here
dependencies = [
    "diffusers==0.34.0",
    "fastapi==0.116.1",
    "flashinfer-python==0.2.11.post1",
    "huggingface-hub==0.34.0",
    "librosa==0.10.2.post1",
    "moshi==0.2.11",
    "numpy==1.26.4",
    "safetensors==0.5.3",
    "scipy==1.11.4",
    "soundfile==0.12.1",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "transformers==4.55.0",
    "uvicorn==0.35.0",
    "zmq==0.0.0",
]

[tool.ruff]
exclude = [".git", ".ruff_cache", ".venv"] 
line-length = 120
target-version = "py312"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = ["F", "E", "W", "I", "B", "PL", "N"] 
ignore = [
    "PLR0913", # Too many arguments in function definition
    "PLR2004", # Magic value used in comparison
    "PLR1722", # Use `sys.exit()` instead of `exit`
    "N802",    # Function name should be lowercase
    "N803",    # Argument name should be lowercase
    "N812",    # Lowercase imported as non-lowercase
    "N806",    # Lowercase imported as non-lowercase
    "F401",    # Unused-import
    "F403",    # unable to detect undefined names
    "F841",
    "E402",    # Module level import not at top of file. 
    "N999",    # Invalid module name
    "PLR0912", # too many branches
    "B905",    # zip strict
    "PLR0915", # Too many statements
    "PLR0911", # Too many return statements
    "PLW2901",
    "B006",    # Do not use mutable data structures for argument defaults
    "B007",
    "B008",    # Do not perform function call in argument defaults
    "N801",
    "N805",    # @field_validator should be cls instead of self
    "PLC0415", # `import` should be at the top-level of a file
    "PLW0127", # Self-assignment of variable.
    "PLW0603", # Using the global statement to update.
]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
docstring-code-format = true
